--- a/GPCE2017/sections/Introduction.tex
+++ b/GPCE2017/sections/Introduction.tex
@@ -1,1 +1,13 @@
 \section{Introduction}\label{sec:introduction}
+
+Over the years object-oriented programming has been widely used to offer great code reuse.
+Programmers define classes as the signature that contains state and operations, and inheritance
+achieves modularity and reusability. There have been lots of research problems proposed for
+extensibility, of which the Expression Problem is a representative one. It requires both data variants
+and operations to be defined in a modular and type-safe way. In terms of modularity, it means that users
+can simply add new constructs or behaviours to an existing system, without modification on the existing code.
+
+For that problem, some OO design patterns,
+other approaches, even including the functional area, provide their solutions to that problem at various
+aspects, and to some extent. For example, [independently extensible ...] has proposed several (partial) solutions with Scala code,
+of which the object-oriented decomposition adopts the \textit{Interpreter} pattern for an extensible style. 
