--- a/GPCE2017/sections/Overview.tex
+++ b/GPCE2017/sections/Overview.tex
@@ -1,17 +1,11 @@
 \section{Overview}\label{sec:overview}
 
-A lot of boilerplate generated
-multi-sorts, generics
-
-independent extensibility
-High-level hierarchies
-
 In this section, we illustrate how to model simple family polymorphism in Java with interfaces,
 and how \name avoids boilerplate code for more usability.
 
 \subsection{Modelling Families with Nested Interfaces}
 
-The original family polymorphism paper [] motivates the need for class families. Software programming
+The original family polymorphism paper [] and higher-order hierarchies paper [] motivates the need for class families. Software programming
 often requires ``the variability at a more global scale than the individual class''. For example, a data
 structure is usually represented by an abstract syntax tree, and such an AST may contain several classes.
 It is necessary to maintain the consistency of those classes upon updates or extensions. \red{TODO: Move this paragraph
@@ -26,100 +20,149 @@ the advantage is that we can keep the names of family members when they are exte
 
 Now one may observe that the use of interfaces has a trade-off: multiple interface inheritance supported by Java makes it convenient for extensibility, nevertheless,
 interfaces are weaker than classes on state and instantiation. In Java, interfaces do not own fields or constructors.
+Declaring one class for each interface is cumbersome and introduces boilerplate.
 Fortunately, we can adopt object interfaces from the Classless Java model []. In that case, fields are modelled by abstract methods,
 and static methods can be defined with anonymous classes that deals with object creation.
 
-Below is an example, where
-three family members \lstinline|Exp,Lit,Add| compose the AST of a simple expression language:
+Here we illustrate with the example from [], about parallel prefix circuits. Below we present a simplified version
+of the AST, by defining a base family with only four members:
 
 \begin{lstlisting}
 interface Base {
-  interface Exp {
-    int eval();
+  interface Circuit {
+    int width();
   }
-  interface Lit extends Exp {
-    int _i();
-    default int eval() {
-      return _i();
+  interface Identity extends Circuit {
+    int _size();
+    default int width() { return _size(); }
+    static Identity of(int _size) {
+      return new Identity() {
+        int size = _size;
+        public int _size() { return size; }
+      };
     }
   }
-  interface Add extends Exp {
-    Exp _e1(); Exp _e2();
-    default int eval() {
-      return _e1().eval() + _e2().eval();
+  interface Above extends Circuit {
+    Circuit _c1(); Circuit _c2();
+    default int width() { return _c1().width(); }
+    static Above of(Circuit _c1, Circuit _c2) {
+      return new Above() {
+        Circuit c1 = _c1, c2 = _c2;
+        public Circuit _c1() { return c1; }
+        public Circuit _c2() { return c2; }
+      };
+    }
+  }
+  interface Beside extends Circuit {
+    Circuit _c1(); Circuit _c2();
+    default int width() {
+      return _c1().width() + _c2().width();
+    }
+    static Beside of(Circuit _c1, Circuit _c2) {
+      return new Beside() {
+        Circuit c1 = _c1, c2 = _c2;
+        public Circuit _c1() { return c1; }
+        public Circuit _c2() { return c2; }
+      };
     }
   }
 }
-\end{lstlisting}
-Here  \lstinline|Lit| and \lstinline|Add|
-stand for literals and additions, respectively. Each literal holds an integer, while each addition is constructed by
-two sub-expressions. These fields are modelled by ``field methods'', which are abstract methods without parameters. Those
-method names start with underscores by convention. An operation \lstinline|eval()| is defined for evaluating expressions,
-and implemented in different cases.
+\end{lstlisting}\red{Need a figure for circuits.}
+Here \lstinline|Identity|, \lstinline|Above| and \lstinline|Beside| are three constructs of \lstinline|Circuit|.
+\lstinline|Identity| holds an integer for the size, while \lstinline|Above| and \lstinline|Beside| each takes
+two sub-circuits and combine them. Those fields are defined as ``field methods'', whose names
+start with underscores by convention. Java 8 allows static methods defined in interfaces with default implementations.
+The \lstinline|of()| methods behave like constructors, they are boilerplate code that can be generated. We inherit from
+Classless Java to support a series of state operations. They are formally introduced in Section ?.
 
-Note that \lstinline|Base| is the family name, but since the nested interfaces are only static, one
-can easily access them globally by \lstinline|Base.Exp|, and so on. For simplicity, we are omitting constructor methods
-in the above code.
+Besides, an operation to calculate the width of a circuit is declared in \lstinline|Circuit|. In the other members such
+a method is given a default implementation, respectively.
+
+Note that here \lstinline|Base| is the family name, but since the nested interfaces are only static, one
+can easily access them globally by \lstinline|Base.Circuit|, and so on. For example, one can create a circuit instance and
+quickly get its width as follows:
+\begin{lstlisting}
+Base.Circuit c = Base.Beside.of(Base.Identity.of(2), Base.Identity.of(3));
+println(c.width()); // "5"
+\end{lstlisting}
 
 \subsection{Solving the Expression Problem}
 
 Interestingly but also importantly, it introduces a new solution to the Expression Problem. Adding new variants and new operations
-becomes easy, and inheritance contributes a lot to code reuse. Following the above example, we try to add a new operation for pretty-printing,
-by creating a new class family:
+becomes easy, and inheritance contributes a lot to code reuse. Following the above example, we try to add a new operation to check
+if a circuit is well-sized. Such an operations is dependent on the existing \lstinline|width()| operation.
+A new class family is defined as follows:
 
 \begin{lstlisting}
-interface BaseWithPrint extends Base {
-  interface Exp extends Base.Exp {
-    String print();
+interface WellSized extends Base {
+  interface Circuit extends Base.Circuit {
+    boolean wellSized();
   }
-  interface Lit extends Exp with Base.Lit {
-    // int _i(); not needed
-    default String print() {
-      return "" + _i();
-    }
+  interface Identity extends Circuit with Base.Identity {
+    // int _size(); not needed
+    default boolean wellSized() { return true; }
+    static Identity of(...) {...}
   }
-  interface Add extends Exp with Base.Add {
-    Exp _e1(); Exp _e2(); // Type-refinement from Base.Exp to BaseWithEval.Exp
-    default String print() {
-      return _e1().print() + " + " + _e2().print();
+  interface Above extends Circuit with Base.Above {
+    Circuit _c1(); Circuit _c2();
+      // Type-refinement from Base.Circuit to BaseWithWellSized.Circuit
+    default boolean wellSized() {
+      return _c1().width() == _c2().width();
     }
+    static Above of(...) {...}
+  }
+  interface Beside extends Circuit with Base.Beside {
+    Circuit _c1(); Circuit _c2();
+      // Type-refinement
+    default boolean wellSized() {
+      return _c1().wellSized() && _c2().wellSized();
+    }
+    static Beside of(...) {...}
   }
 }
 \end{lstlisting}
-Here each family member also inherits its corresponding member in \lstinline|Base|, so that \lstinline|BaseWithPrint.Exp|
-supports both evaluation and pretty-printing. The type-refinement of fields in \lstinline|Add| ensures that the sub-expressions
-support both operations, and this is done because Java allows covariant return types.
-It is not necessary to make \lstinline|BaseWithPrint| as a subtype of
-\lstinline|Base|, we just write this to indicate the relation between class families.
+Here each family member also inherits its corresponding member in \lstinline|Base|, so that \lstinline|WellSized.Circuit|
+supports both \lstinline|width()| and \lstinline|wellSized()|. The type-refinement of fields in \lstinline|Above| and \lstinline|Beside|
+ensures that the sub-circuits support both operations, and this is done because Java allows covariant return types.
+At this moment it is not necessary to make \lstinline|WellSized| as a subtype of
+\lstinline|Base|, we just write this to indicate the relation between class families. The static constructors are again boilerplate
+that can be generated, so we omit the details.
 
-Unlike the traditional family polymorphism, when we use inheritance to achieve code reuse, it also builds subtyping relations
+Unlike traditional family polymorphism, when we use inheritance to achieve code reuse, it also builds subtyping relations
 among members from different families, because subclassing accompanies subtyping in Java. Separating them (if we want) requires
 additional semantics, it is not cheap. Also in this case, we can no longer avoid mixing the members from different families.
 In fact, isolating families or avoiding mixing the members is sometimes too conservative; it has been shown that mixing them can
 be both type-safe and practical []. On the other hand, one can also check the dynamic types of objects to ensure they belong to
 the same family, and this can simply be done by some Java reflection code.
 
-By the Expression Problem, the other dimension of extensibility is adding new data constructs. Suppose we want subtraction to be added
+By the Expression Problem, the other dimension of extensibility is adding new data constructs. Suppose we want another primitive
+construct \lstinline|Fan| to be added
 to the \lstinline|Base| family. The following code realizes such an extension:
 
 \begin{lstlisting}
-interface BaseWithSub extends Base {
-  interface Exp extends Base.Exp {}
-  interface Lit extends Exp with Base.Lit {}
-  interface Add extends Exp with Base.Add {
-    Exp _e1(); Exp _e2();
+interface BaseFan extends Base {
+  interface Circuit extends Base.Circuit {}
+  interface Identity extends Circuit with Base.Identity {
+    static Identity of(...) {...}
   }
-  interface Sub extends Exp {
-    Exp _e1(); Exp _e2();
-    default int eval() {
-      return _e1().eval() - _e2().eval();
-    }
+  interface Above extends Circuit with Base.Above {
+    Circuit _c1(); Circuit _c2();
+    static Above of(...) {...}
+  }
+  interface Beside extends Circuit with Base.Beside {
+    Circuit _c1(); Circuit _c2();
+    static Beside of(...) {...}
+  }
+  interface Fan extends Circuit {
+    int _size();
+    default int width() { return _size(); }
+    static Identity of(...) {...}
   }
 }
 \end{lstlisting}
-Here \lstinline|Exp|, \lstinline|Lit| and \lstinline|Add| only deal with type-refinements and inheritance. A
-new nested interface \lstinline|Sub| includes two field methods for the two sub-expressions, together with
-the implementation for the inherited \lstinline|eval()|.
+Here \lstinline|Circuit|, \lstinline|Identity|, \lstinline|Above| and \lstinline|Beside| only deal with type-refinements and inheritance. A
+new nested interface \lstinline|Fan| includes one field method for its size, together with
+the implementation for the inherited \lstinline|width()|.
 
 We have demonstrated that such a pattern provides a practical solution to the Expression Problem. The member
 names need not to be changed, and multiple inheritance offers great code reuse. However, one issue occurring
@@ -130,37 +173,39 @@ is the \textit{F-bounded polymorphism} [], which we will discuss later in Sectio
 
 \subsection{Reducing Boilerplate with \name}
 Although the class families support two dimensions of extensibility, it is unsatisfactory to observe that there is a lot
-of boilerplate code caused by extensions, and it can be divided into two parts: the glue code and type-refinement code.
-The glue code builds subtyping relations among families and their members, so that fields and operations are inherited.
-The type-refinement code updates the field types to those in the same family, and this is done by just redeclaring field
+of boilerplate code caused by extensions, and it can be classified into three kinds: the constructor methods, the glue code for subtyping
+and field type refinements. The first one has been addressed by annotation processing in Classless Java. Besides,
+the glue code builds subtyping relations among families and their members, so that fields and operations are inherited.
+And the type-refinement code updates the field types to those in the same family, and this is done by just redeclaring field
 methods (but member types are already new).
 
-We have developed the Java annotation \lstinline|@Family| to reduce that boilerplate. The annotation processing can automatically
-generate the required syntax in bytecode during compilation, and does not affect source code. In our framework, \lstinline|BaseWithPrint|
-and \lstinline|BaseWithSub| can be defined as follows:
+We have developed the Java annotation \lstinline|@Family| to reduce all the three sorts of boilerplate. The annotation processing can automatically
+generate the required syntax in bytecode during compilation, and does not affect source code. With our framework, \lstinline|WellSized|
+and \lstinline|BaseFan| can be defined by users as follows:
 \begin{lstlisting}
-@Family interface BaseWithPrint extends Base {
-  interface Exp {
-    String print();
+@Family interface WellSized extends Base {
+  interface Circuit {
+    boolean wellSized();
   }
-  interface Lit {
-    default String print() {
-      return "" + _i();
+  interface Identity {
+    default boolean wellSized() { return true; }
+  }
+  interface Above {
+    default boolean wellSized() {
+      return _c1().width() == _c2().width();
     }
   }
-  interface Add {
-    default String print() {
-      return _e1().print() + " + " + _e2().print();
+  interface Beside {
+    default boolean wellSized() {
+      return _c1().wellSized() && _c2().wellSized();
     }
   }
 }
 
-@Family interface BaseWithSub extends Base {
-  interface Sub extends Exp {
-    Exp _e1(); Exp _e2();
-    default int eval() {
-      return _e1().eval() - _e2().eval();
-    }
+@Family interface BaseFan extends Base {
+  interface Fan extends Circuit {
+    int _size();
+    default int width() { return _size(); }
   }
 }
 \end{lstlisting}
@@ -172,25 +217,27 @@ The family subtyping also achieves independent extensibility []. Suppose we have
 each introducing several new operations on expressions. By multiple inheritance, we can easily compose
 those features without boilerplate, like the code below:
 \begin{lstlisting}
-interface Eval {...} // the family with evaluation
-interface Print {...} // the family with pretty-priting
-interface Depth {...} // the family with the operation of calculating tree depth
+interface Width {...} // the family with width operation
+interface Depth {...} // the family with depth operation
 ...
 
-@Family interface ComposedFamily extends Eval, Print, Depth, ... {} // combining features
+@Family interface ComposedFamily extends Width, Depth, ... {} // combining features
 \end{lstlisting}
 
-In the above example, combining features does not need any extra code in the body. Similary we can also
-combine \lstinline|BaseWithPrint| and \lstinline|BaseWithSub|, nonetheless, we need to implement the
+In the above example, combining features does not need any extra code in the body. Similarly we can also
+combine \lstinline|WellSized| and \lstinline|BaseFan|, nonetheless, we need to implement the
 pretty-printing on subtractions, so that the object interfaces are able to be instantiated:
 \begin{lstlisting}
-@Family interface BaseWithPrintAndSub extends BaseWithPrint, BaseWithSub {
-  interface Sub {
-    default String print() {
-      return _e1().print() + " - " + _e2().print();
-    }
+@Family interface WellSizedFan extends WellSized, BaseFan {
+  interface Fan {
+    default boolean wellSized { return true; }
   }
 }
+\end{lstlisting}
+Now we can test the new family with some code below: (the \lstinline|of()| methods are already generated by \lstinline|@Family|)
+\begin{lstlisting}
+WellSizedFan.Circuit c2 = WellSizedFan.Above.of(WellSizedFan.Identity.of(2), WellSizedFan.Fan.of(3));
+println(c2.wellSized()); // "false"
 \end{lstlisting}
 
 In our prototype implementation, \lstinline|@Family| also supports generics and higher-order hierarchies [].
